# keeper_opal_auth_quira_submission

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rbac.rego  setup.py
.devcontainer/: devcontainer.json
client/: package-lock.json  package.json
client/public/: styles.css
client/src/: App.jsx  index.js
client/src/components/: CreateArea.jsx  Note.jsx
client/src/components/auth/: Login.css  Login.jsx  Register.css  Register.jsx
client/src/utils/: axiosConfig.js
server/: index.js  package-lock.json  package.json
server/prisma/: schema.prisma
server/prisma/migrations/20240619092821_init/: migration.sql
server/src/: noteshandler.js  updata_opa_data.js  userhandler.js
sql/: init.sql
src/opal_fetcher_mysql/: provider.py
