[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.1"]
build-backend = "setuptools.build_meta"

[project]
name = 'opal-fetcher-mysql'
authors = [
    { name="Bhimesh Agrawal", email="bhimeshagrawalggc@gmail.com" },
]
description="An OPAL fetch provider to bring authorization state from MySQL DB."
readme = "README.md"
keywords = [ "Open Policy Agent", "OPA", "OPAL", "Open Policy Administration Layer", "MySQL", "Permit.io" ]
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
classifiers = [
    'Operating System :: OS Independent',
    'License :: OSI Approved :: Apache Software License',
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
dependencies = [
    'opal-common>=0.1.11',
    'aiomysql',
    "pydantic",
    'tenacity',
    'click',
]
dynamic = ["version"]

[project.urls]
"Source" = "https://github.com/bhimeshagrawal/opal-fetcher-mysql"
"Bug Tracker" = "https://github.com/bhimeshagrawal/opal-fetcher-mysql/issues"

[tool.setuptools_scm]
